--- a/MPColumn/app/src/main/res/layout/content_main.xml
+++ b/MPColumn/app/src/main/res/layout/content_main.xml
@@ -37,5 +37,6 @@
         android:layout_below="@+id/etQuery"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:numColumns="2" />
 </RelativeLayout>
