--- a/MPColumn/app/src/main/res/layout/content_main.xml
+++ b/MPColumn/app/src/main/res/layout/content_main.xml
@@ -10,12 +10,12 @@
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
 
-    <GridView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/gvResults"
+        android:id="@+id/rvResults"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:numColumns="2" />
+         />
 </RelativeLayout>
