Added hetero ui

--- a/MPColumn/app/src/main/res/layout/item_article_result.xml
+++ b/MPColumn/app/src/main/res/layout/item_article_result.xml
@@ -1,21 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="4dp"
+    android:background="#222222">
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:id="@+id/ivThumbnail"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="center"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSnippet"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Default"
-        android:id="@+id/tvHeadline"
+            android:layout_below="@+id/vHeader"
+        android:paddingTop="5dp"
+        android:text="Snippet"
+        android:textColor="#CCCCCC"
+         />
+
+    <ImageView
+        android:id="@+id/ivThumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:maxLines="2"
-        android:ellipsize="end"/>
-</LinearLayout>
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:maxHeight="300dp"/>
+
+    <View
+        android:id="@+id/vHeader"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true"
+        android:background="#66000000"></View>
+
+    <TextView
+        android:id="@+id/tvHeadline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingTop="5dp"
+        android:text="Headline"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
+
+</RelativeLayout>
