Added ninja toolbar

--- a/MPColumn/app/src/main/res/layout/content_main.xml
+++ b/MPColumn/app/src/main/res/layout/content_main.xml
@@ -17,5 +17,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:paddingTop="?attr/actionBarSize"
+        android:clipToPadding="false"
+        android:translationZ="2dp"
          />
 </RelativeLayout>
