--- a/MPColumn/app/src/main/res/layout/activity_search.xml
+++ b/MPColumn/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
    >
 
-
+    <include layout="@layout/content_main"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
