--- a/MPColumn/app/src/main/res/layout/content_main.xml
+++ b/MPColumn/app/src/main/res/layout/content_main.xml
@@ -10,15 +10,16 @@
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rvResults"
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:paddingTop="?attr/actionBarSize"
-        android:clipToPadding="false"
-        android:translationZ="2dp"
-         />
+        android:columnCount="4"
+        android:rowCount="4">
+
+
+
+    </GridLayout>
 </RelativeLayout>
