--- a/MPColumn/app/src/main/res/layout/activity_search.xml
+++ b/MPColumn/app/src/main/res/layout/activity_search.xml
@@ -2,9 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_background"
    >
 
     <include layout="@layout/content_main"/>
+
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -30,8 +33,6 @@
             android:background="@android:color/transparent" />
 
         </LinearLayout>
-
-
 
 
 </FrameLayout>
