--- a/MPColumn/app/src/main/res/layout/item_article_result.xml
+++ b/MPColumn/app/src/main/res/layout/item_article_result.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="4dp"
-    android:background="#222222">
+    android:layout_margin="4dp"
+    android:background="@color/app_fore_ground">
 
 
     <TextView
@@ -14,7 +14,8 @@
             android:layout_below="@+id/vHeader"
         android:paddingTop="5dp"
         android:text="Snippet"
-        android:textColor="#CCCCCC"
+        android:paddingLeft="4dp"
+        android:textColor="@color/text_dark"
          />
 
     <ImageView
@@ -31,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
-        android:background="#66000000"></View>
+        android:background="@color/titleOverlay"></View>
 
     <TextView
         android:id="@+id/tvHeadline"
@@ -43,6 +44,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingTop="5dp"
+        android:paddingLeft="4dp"
         android:text="Headline"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
