--- a/MPColumn/app/src/main/res/values/colors.xml
+++ b/MPColumn/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#00c1d6</color>
+    <color name="colorPrimaryDark">#0996a5</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="titleOverlay">#88000000</color>
+    <color name="app_background">#1d3137</color>
+    <color name="app_fore_ground">#324349</color>
+
+    <color name="text_light">#ffffff</color>
+    <color name="text_dark">#cacdcf</color>
+
 </resources>
