--- a/MPColumn/app/src/main/res/values/dimens.xml
+++ b/MPColumn/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">3dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="null_state_margin">4dp</dimen>
 </resources>
