--- a/MPColumn/app/src/main/res/layout/activity_search.xml
+++ b/MPColumn/app/src/main/res/layout/activity_search.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
 
     <include layout="@layout/content_main"/>
@@ -26,12 +27,18 @@
             android:orientation="vertical"
             android:background="?attr/colorPrimary">  <!-- added here -->
 
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/transparent" />
-
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            </android.support.design.widget.AppBarLayout>
         </LinearLayout>
 
 
