--- a/MPColumn/app/src/main/res/values/colors.xml
+++ b/MPColumn/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00c1d6</color>
     <color name="colorPrimaryDark">#0996a5</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff8d3a</color>
 
     <color name="titleOverlay">#88000000</color>
     <color name="app_background">#1d3137</color>
