--- a/MPColumn/app/src/main/res/layout/fragment_sort_dialog.xml
+++ b/MPColumn/app/src/main/res/layout/fragment_sort_dialog.xml
@@ -139,6 +139,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        android:id="@+id/btnReset"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
 
 </FrameLayout>
