--- a/MPColumn/app/src/main/res/menu/menu_main.xml
+++ b/MPColumn/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="ifRoom"
-        android:icon="@android:drawable/ic_menu_sort_alphabetically"/>
+        android:icon="@drawable/filter_empty"/>
     <item android:id="@+id/action_search"
         android:orderInCategory="5"
         android:title="Search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/search_white"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
