--- a/MPColumn/app/src/main/res/layout/activity_search.xml
+++ b/MPColumn/app/src/main/res/layout/activity_search.xml
@@ -3,12 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-   >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include layout="@layout/content_main"/>
-
-
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -16,10 +13,7 @@
         android:id="@+id/rvResults"
 
         android:paddingTop="?attr/actionBarSize"
-        android:clipToPadding="false"
-        />
-
-
+        android:clipToPadding="false"/>
         <LinearLayout
             android:id="@+id/toolbarContainer"
             android:layout_width="match_parent"
@@ -40,6 +34,4 @@
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
             </android.support.design.widget.AppBarLayout>
         </LinearLayout>
-
-
 </FrameLayout>
