--- a/MPColumn/app/src/main/res/menu/menu_main.xml
+++ b/MPColumn/app/src/main/res/menu/menu_main.xml
@@ -1,13 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="ifRoom"
-        android:icon="@drawable/filter_empty"/>
-    <item android:id="@+id/action_search"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/filter_empty"
+        android:orderInCategory="100"
+        android:title="@string/action_filter"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/search_white"
         android:orderInCategory="5"
         android:title="Search"
-        android:icon="@drawable/search_white"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
