--- a/MPColumn/app/src/main/res/menu/menu_main.xml
+++ b/MPColumn/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/miActionProgress"
+        android:title="Loading..."
+        android:visible="false"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        app:actionLayout="@layout/action_bar_progress" />
+    <item
         android:id="@+id/action_filter"
         android:icon="@drawable/filter_empty"
         android:orderInCategory="100"
